# smartwallpaper

./: Cargo.toml
src/: lib.rs  main.rs  theme.rs
