[package]
name = "smartwp"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
chrono = "0.4"
clap = "2.26.0"
hostname = "0.4.0"
image = "0.25"
imageproc = "0.25"
#local-ip-address = "0.6.3"
network-interface = "2.0.0"
rusttype = "0.9"
time = { version = "0.3.38", features = ["local-offset"]}
ureq = "3.0.8"
